--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html !DOCTYPE>
     <head>
         <title>The Present Game</title>
-    <link rel="shortcut icon" href="favicon.png"></head>
+    <link rel="shortcut icon" href="present.webp"></head>
     <body>
         <div id="root"></div>
     <script type="text/javascript" src="main.js"></script></body>
